Recognize PHP functions which returns references.

BUG: 118914